----------
v6.3.0-git
----------



------
v6.2.1
------

[mms] Fix dragging a mailbox to the base level in dynamic view.
[mms] Add ability to drag/drop text to dynamic HTML compose window on Chrome
      and IE.
[mms] Re-enable drag/drop of text to dynamic plaintext compose window (Bug
      #13281).


------
v6.2.0
------

[mms] Fix some regressions in linked attachments behavior (Bug #13232).
[mjr] Fix fatal error when printing empty HTML attachments (Bug #13322).


---------
v6.2.0RC1
---------

[mms] Fix handling image attachments when added via the HTML editor Image
      dialog.


-----------
v6.2.0beta3
-----------

[mms] Fix saving attachments to sent-mail message in smartmobile view (Bug
      #13257).
[mms] Remove the 'default_msg_charset' preference.
[mms] Rewritten folder list code for dynamic view.
[mms] Fix saving expanded state when expanding all mailboxes when all mailboxes
      are already cached in the browser.


-----------
v6.2.0beta2
-----------

[mms] Allow drag/drop to HTML compose body work with text data.
[mms] Cache mailbox exists results in the current access.


-----------
v6.2.0beta1
-----------

[jan] Add Japanese help file (Hiromi Kimura <hiromi@tac.tsukuba.ac.jp>).
[mms] Add automatic configuration of remote account connection details.
[mms] Support LMTP servers when sending mail.
[mms] Fix regression where creating a mailbox that is currently a container
      would not subscribe to that mailbox.
[mms] Add checks to ensure that saved session expiration message was created by
      the user rather than an outside source.
[mms] Improved handling for multiple expand/collapse actions in the dynamic
      folder list (Bug #13170).
[mms] Provide visual UI info to user that file is uploading when drag/drop
      attachments in dynamic view.


------------
v6.2.0alpha1
------------

[mms] Don't set References header in reply message if equal to In-Reply-To
      header (RFC 5322 [3.6.4]).